# HPPS24-Quantum-Simulation

./: .gitignore  LICENSE  README.md  justfile  test.txt
analysis/qiskit-jn/: q05-8000.qasm  q07-05.qasm  q09-05.qasm  q10-05.qasm  q10-10.qasm  random_circuit.ipynb  requirements.txt  rng-circ.py  test.ipynb
docs/: documentation.typ
qcs-core/: Cargo.toml
qcs-core/src/: dag.rs  main.rs
qcs-host/: .gitignore  Cargo.toml  full-adder.txt  justfile  q2-00.txt  q3-00.txt  q3-01.txt  q3-02.txt  q5-00.txt  q5-01.txt  schema.sql
qcs-host/circuits/: circuit_5_300.qasm  full-adder.qasm  full-adder.txt  q2-01.qasm  q2-02.qasm  q3-00.txt  q3-02.txt  q3-03.qasm  q5-01.qasm
qcs-host/qcs-bins/: Cargo.toml
qcs-host/qcs-bins/src/: lib.rs  main.rs
qcs-host/qcs-circuit-parser/: Cargo.toml
qcs-host/qcs-circuit-parser/src/: error.rs  lib.rs  main.rs  openqasm.rs  parser.rs  tokens.rs
qcs-host/qcs-core/: Cargo.toml
qcs-host/qcs-core/src/: compiler.rs  contractions.rs  cpu_scheduler.rs  dag.rs  executor.rs  fpga_scheduler.rs  instructions.rs  lib.rs  main.rs  model.rs  op_tree.rs  representations.rs  scheduler.rs  tree.rs  utils.rs
qcs-host/qcs-core/src/model/: blocks.rs  gates.rs  span.rs
qcs-host/qcs-core/src/representations/: contraction_graph.rs  tensor_networks.rs
qcs-host/qcs-core/src/scheduler/: contraction.rs  operation.rs
qcs-host/qcs-core/tests/: adder.rs  eval-contraction.rs
