[package]
name = "qcs-bins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qcs-circuit-parser = { path = "../qcs-circuit-parser" }
qcs-core = { path = "../qcs-core" }
clap = { version = "4.5.4", features = ["derive"] }
nalgebra.workspace = true
rusqlite = "0.31.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
csv = "1.3.0"
