[package]
name = "qcs-circuit-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
logos = "0.14.0"
nom = "7.1.3"
qcs-core = { path = "../qcs-core" }
