[package]
name = "qcs-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.10.0"
enum_dispatch = "0.3.13"
hashbrown = "0.14.3"
nalgebra = "0.32.5"
num-complex = "0.4.5"
petgraph = "0.6.4"
