[package]
name = "qcs-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dashmap = "5.5.3"
enum_dispatch = "0.3.13"
hashbrown = "0.14.3"
nalgebra.workspace = true
num-complex = "0.4.5"
num_cpus = "1.16.0"
petgraph = "0.6.4"
rayon = "1.10.0"

[dev-dependencies]
anyhow = "1.0.82"
qcs-circuit-parser = { path = "../qcs-circuit-parser" }
